# silent-branding-attack

./: .gitignore  README.md  generate_poisoned_images.py  generation_verification.ipynb  logo_personalization_sdxl.py  pyproject.toml
scripts/: finetune.sh  generate_poisoned_images.sh  logo_personalization.sh
utils/: generate_caption.py
