[project]
name = "silent-branding-attack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "accelerate>=1.11.0",
   "bitsandbytes>=0.48.2",
   "datasets>=4.4.1",
   "diffusers>=0.35.2",
   "einops>=0.8.1",
   "jupyter>=1.1.1",
   "jupyterlab>=4.4.10",
   "opencv-python>=4.12.0.88",
   "peft>=0.18.0",
   "scipy>=1.16.3",
   "torch==2.9.1",
   "torchvision==0.24.1",
   "tqdm>=4.67.1",
   "transformers>=4.57.1",
   "wandb>=0.23.0",
]

[tool.uv.sources]
torch = [
    { index = "torch-cu128" },
]

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
